Added CRUD for Devices

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-PORT=8080
+PORT=8081
 DB_USER=dsilvestri
 DB_PASS=David.03
-DB_CNN_STRING=mongodb+srv://dsilvestri:David.03@mycluster.dyprqqc.mongodb.net/chatdb
+DB_CNN_STRING=mongodb+srv://dsilvestri:David.03@mycluster.dyprqqc.mongodb.net/test
 JWT_KEY=ThisisMyS@cretPass8rod
